<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical"
    tools:context=".SecondActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/GridLayout"
        android:layout_width="401dp"
        android:layout_height="400dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="95dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="35dp">


        <Button
            android:id="@+id/button1"
            android:layout_width="158dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/custom_button"
            android:padding="40dp"


            android:text="@string/CancerInfo"
            android:textColor="@color/white_70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_2"
            android:layout_width="158dp"
            android:layout_height="120dp"
            android:layout_marginStart="196dp"
            android:layout_marginLeft="196dp"
            android:layout_marginTop="4dp"


            android:background="@drawable/custom_button"
            android:padding="40dp"
            android:text="@string/DiabetesInfo"
            android:textColor="@color/white_70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="158dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/custom_button"
            android:layout_marginTop="144dp"

            android:padding="40dp"
            android:text="@string/blood_Pressure_Info"
            android:textColor="@color/white_70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="158dp"
            android:layout_height="120dp"
            android:layout_marginStart="196dp"
            android:layout_marginLeft="196dp"
            android:layout_marginTop="144dp"
            android:background="@drawable/custom_button"
            android:padding="40dp"
            android:text="@string/TyphoidInfo"
            android:textColor="@color/white_70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="158dp"
            android:layout_height="120dp"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/custom_button"
            android:padding="40dp"
            android:text="@string/MalariaInfo"
            android:textColor="@color/white_70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="158dp"
            android:layout_height="120dp"
            android:layout_marginStart="196dp"
            android:layout_marginLeft="196dp"
            android:layout_marginTop="280dp"
            android:background="@drawable/custom_button"
            android:padding="40dp"
            android:text="@string/TumourInfo"
            android:textColor="@color/white_70"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F44336"
        android:text="@string/next_Second"
        android:textColor="@color/white_70"
        android:layout_below="@id/GridLayout"
        android:layout_margin="5dp"
        android:layout_centerInParent="true"
        />

</RelativeLayout>
