<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/orange"
   >

    <Button
        android:id="@+id/ButtonHealthCare"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/ImageView"
        android:layout_centerInParent="true"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="-189dp"
        android:background="@drawable/health_care_image"
        android:gravity="center"
        android:padding="45dp" />

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/imagehealth" />

    <Button
        android:id="@+id/button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="-116dp"

        android:background="@android:drawable/screen_background_light_transparent"
        android:text="@string/next" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="64dp"
        android:layout_height="24dp"
        android:layout_below="@+id/button0"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:background="@android:drawable/screen_background_dark_transparent"
        android:text="@string/about"
        android:textColor="@color/white_70" />

</RelativeLayout>