<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_LastPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LastPage"
    android:background="@color/orange">


    <ScrollView
        android:id="@+id/scrollview_7"
        android:layout_width="408dp"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/LinearLayout_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView_7"
                android:layout_width="406dp"
                android:layout_height="289dp"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/health_is_wealth" />

            <TextView
                android:id="@+id/textView_7"
                android:layout_width="wrap_content"
                android:layout_height="950dp"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="7dp"
                android:text="@string/healthinformation" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@android:drawable/screen_background_light_transparent"
                android:text="@string/next" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>